syntax = "proto3";
package Proto;
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

message CreateCustomerRequest {
    string name = 1;
    string password = 2;
    string email = 3;
    string username = 4;
    google.protobuf.FieldMask fieldMask = 5;
}

message GetCustomerRequest {
    string email = 1;
    google.protobuf.FieldMask fieldMask = 2;
}

message CreateCustomerResult {
    string name = 1;
    string email = 2;
    string username = 3;
}

message GetCustomerResult {
    string name = 1;
    string email = 2;
    string username = 3;
}

message CheckUserRequest {
    string username = 1;
    string password = 2;
    google.protobuf.FieldMask fieldMask = 3;
}

message CheckUserResult {
    bool isRegistered = 1;
}

message GetUserRequest {
    string username = 1;
    google.protobuf.FieldMask fieldMask = 2;
}

message ListCreateCustomerResult {
    repeated CreateCustomerResult customers = 1;
}

message GetUsersBeforeDateRequest {
    google.protobuf.Timestamp expiration_date = 1;
    google.protobuf.FieldMask fieldMask = 2;
}

message UsernameList {
    repeated GetUserRequest usernames = 1;
    google.protobuf.FieldMask fieldMask = 2;
}